[package]
name = "nickel_session"
version = "0.1.0"
authors = ["Kevin Butler <haqkrs@gmail.com>"]

[dependencies]
typemap = "*"
plugin = "*"
rustc-serialize = "*"
time = "*"
cookie = "^0.1"
byteorder = "*"
nickel = "^0.7"

[dependencies.nickel_cookies]
version = "^0.1"
features = ["secure"]
git = "https://github.com/nickel-org/cookies"
