[package]
name = "nickel_session"
version = "0.1.0"
authors = ["Kevin Butler <haqkrs@gmail.com>"]
description = "Session support for nickel.rs"
license = "MIT"
repository = "https://github.com/nickel-org/session"

[dependencies]
typemap = "*"
plugin = "*"
rustc-serialize = "*"
time = "*"
cookie = "^0.2"
byteorder = "*"
nickel = "^0.8"

[dependencies.nickel_cookies]
version = "^0.1"
features = ["secure"]
git = "https://github.com/nickel-org/cookies"
